updated swagger docs, and removed redirects
